# OpenALStudy

./: CMakeLists.txt
sources/: main.cpp
tests/: CMakeLists.txt
